--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,34 @@
 
     <groupId>ru.geekbrains</groupId>
     <artifactId>CloudRepository</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>Server</module>
+        <module>Client</module>
+        <module>Common</module>
+    </modules>
+    <dependencies>
+    <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+    <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-all</artifactId>
+        <version>4.1.29.Final</version>
+    </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+    </dependencies>
+    <properties>
+
+    <maven.compiler.source>1.8</maven.compiler.source>
+
+    <maven.compiler.target>1.8</maven.compiler.target>
+
+</properties>
+
 
 
 </project>
